Fixes #1: Implements extraction of refactorings from test files (removes CSV functionality)